--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Publish to Registry
-      uses: jerray/publish-docker-action@master
-      with:
-        name: jamhed/argo
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        auto_tag: true
+    - run: docker build .
+    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    - run: docker tag workflow-controller jamhed/workflow-controller:${{ github.ref }}
+    - run: docker tag argoexec jamhed/argoexec:${{ github.ref }}
+    - run: docker tag argocli  jamhed/argocli:${{ github.ref }}
+    - run: docker push jamhed/workflow-controller:${{ github.ref }}
+    - run: docker push jamhed/argoexec:${{ github.ref }}
+    - run: docker push jamhed/argocli:${{ github.ref }}
