--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,11 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - run: docker build .
-    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    - run: docker tag workflow-controller jamhed/workflow-controller:${GITHUB_REF##*/}
-    - run: docker tag argoexec jamhed/argoexec:${GITHUB_REF##*/}
-    - run: docker tag argocli  jamhed/argocli:${GITHUB_REF##*/}
-    - run: docker push jamhed/workflow-controller:${GITHUB_REF##*/}
-    - run: docker push jamhed/argoexec:${GITHUB_REF##*/}
-    - run: docker push jamhed/argocli:${GITHUB_REF##*/}
+    - run: ./build.sh
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
